# python-workflow-definition

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.html  README.md  aiida_arithmetic.html  aiida_arithmetic.ipynb  aiida_construct_qe.ipynb  aiida_nfdi.html  aiida_nfdi.ipynb  aiida_qe.html  aiida_qe.ipynb  aiida_simple.html  aiida_simple.ipynb  aiida_simple.json  aiida_to_jobflow_qe.ipynb  aiida_to_jobflow_simple.ipynb  aiida_to_pyiron_base_qe.ipynb  aiida_to_pyiron_base_simple.ipynb  arithmetic.html  conclusion.html  constructed-while-output.json  echo_module.py  environment.yml  environment_qe.yml  evcurve.html  filename_workflow.json  genindex.html  intro.html  jobflow_arithmetic.html  jobflow_arithmetic.ipynb  jobflow_nfdi.html  jobflow_nfdi.ipynb  jobflow_qe.html  jobflow_qe.ipynb  jobflow_simple.html  jobflow_simple.ipynb  jobflow_simple.json  jobflow_to_aiida_qe.ipynb  (+57 more)
.bak/pwd-recursive-while/: README.md  aiidaworkgraph.ipynb  environment.yml  jobflow.ipynb  jobflow_while.ipynb  postBuild
.github/workflows/: aiida.yml  book.yml  deploy.yml  executorlib.yml  jobflow.yml  load.yml  nfdi.yml  pipeline.yml  pyiron.yml  pypi.yml  python.yml  qe.yml  simple.yml
_downloads/2733b71b8b860a0550ebcfb326aabf3a/: simple_workflow.py
_downloads/4e50b332423ddf7c6ac6a8f369748242/: workflow_qe.json
_downloads/4fce43a14fb0221048f87bf1c5f7507a/: workflow.json
_downloads/7ce8b93e79c1ee48a655ac7e627b9960/: processing.yaml
_downloads/99eb77c77821cee4b1c6b4acc6b55ea7/: workflow_nfdi.json
_downloads/9b33cb965729263c315b9517407c13c5/: nfdi_ing_workflow.py
_downloads/b85b54c725e4538522e7eabb629474c5/: workflow.json
_downloads/ccde96f4155d5d9b945f1f0b662ed925/: workflow_simple.json
_sources/: README.md  aiida_arithmetic.ipynb  aiida_nfdi.ipynb  aiida_qe.ipynb  aiida_simple.ipynb  arithmetic.md  intro.md  jobflow_nfdi.ipynb  jobflow_qe.ipynb  jobflow_simple.ipynb  nfdi.md  pyiron_base_arithmetic.ipynb  pyiron_base_qe.ipynb  pyiron_base_simple.ipynb  simple.md  universal_workflow_nfdi.ipynb  universal_workflow_qe.ipynb  universal_workflow_simple.ipynb
_sources/book/: arithmetic.md  simple.md
adis_tools/: pyproject.toml
binder/: environment.yml  postBuild
book/: _toc.yml  arithmetic.html  conclusion.html  config.yml  environment.yml  evcurve.html  evcurve.md  intro.html  nfdi.html  simple.html  simple.md
documentation/: _config.yml  _toc.yml  arithmetic.html  arithmetic.md  conclusion.html  conclusion.md  environment.yml  evcurve.html  intro.html  intro.md  nfdi.html  while_loop_export_approaches.md
example_workflows/: WHILE_LOOP_COMPARISON.md
example_workflows/arithmetic/: aiida.html  aiida.ipynb  aiida_arithmetic.ipynb  aiida_dev.py  aiida_example.py  aiida_simple.json  cwl.html  cwl.ipynb  executorlib.html  executorlib.ipynb  jobflow.html  jobflow.ipynb  jobflow_arithmetic.ipynb  jobflow_example.py  pyiron_base.html  pyiron_base.ipynb  pyiron_base_arithmetic.ipynb  pyiron_workflow.html  pyiron_workflow.ipynb  universal_workflow.html  universal_workflow.ipynb  (+3 more)
html/: WhileLoop.html  WorkGraph.html
python_files/: aiida_to_jobflow_qe.py  aiida_to_jobflow_simple.py  aiida_to_pyiron_base_qe.py  universal_qe_to_aiida.py  xing-v2.py
python_workflow_definition/: pyproject.toml
python_workflow_definition/src/python_workflow_definition/: aiida.py  executorlib.py  expression_eval.py  jobflow.py  models.py  plot.py  purepython.py  pyiron_base.py  pyiron_workflow.py  shared.py
python_workflow_definition/src/python_workflow_definition/_pydantic/: models.py
python_workflow_definition/src/python_workflow_definition/cwl/: __init__.py  __main__.py  export.py
tests/: test_aiida.py  test_cwl.py  test_executorlib.py  test_jobflow.py  test_models.py  test_plot.py  test_purepython.py  test_pyiron_base.py  test_pyiron_workflow.py  test_shared.py
(+98 files in other folders)
