[project]
name = "python-workflow-definition"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic==2.11.4",
    "hatch==1.14.1",
    "hatchling==1.27.0",
    "httpcore==1.0.7",
    "jobflow==0.1.19",
    "pyiron-base==0.12.0",
    "pygraphviz==1.14",
    "aiida-workgraph==0.7.3",
    # "conda-subprocess==0.0.7",
    "networkx==3.4.2",
    "cwltool==3.1.20250110105449",
    "ipdb",
]
