[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_workflow_definition"
version = "0.1.2"
description = "Python Workflow Definition - workflow interoperability for aiida, jobflow and pyiron"
authors = [
  { name = "Jan Janssen", email = "janssen@mpie.de" },
  { name = "Janine George", email = "janine.geogre@bam.de" },
  { name = "Julian Geiger", email = "julian.geiger@psi.ch" },
  { name = "Xing Wang", email = "xing.wang@psi.ch" },
  { name = "Marnik Bercx", email = "marnik.bercx@psi.ch" },
  { name = "Christina Ertural", email = "christina.ertural@bam.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.21",
    "pydantic>=2.7.0,<=2.12.4",
]

[project.optional-dependencies]
aiida = [
    "aiida-workgraph>=0.5.1,<=0.7.6",
]
jobflow = [
    "jobflow>=0.1.18,<=0.2.1",
]
pyiron = [
    "pyiron_base>=0.11.10,<=0.15.10",
]
plot = [
    "pygraphviz>=1.10,<=1.14",
    "networkx>=2.8.8,<=3.5",
    "ipython>=7.33.0,<=9.8.0",
]

[tool.coverage.run]
source = ["python_workflow_definition"]
command_line = "-m unittest discover tests"