[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_workflow_definition"
version = "0.0.1"
description = "Python Workflow Definition for the Ab initio Description of Iron and Steel (ADIS2023): Digitalization and Workflows workshop"
authors = [
  { name = "Jan Janssen", email = "janssen@mpie.de" },
  { name = "Janine George", email = "janine.geogre@bam.de" },
  { name = "Julian Geiger", email = "julian.geiger@psi.ch" },
  { name = "Marnik Bercx", email = "marnik.bercx@psi.ch" },
  { name = "Christina Ertural", email = "christina.ertural@bam.de" },
]
license = { text = "MIT" }
dependencies = ["jobflow", "pyiron_base", "aiida-workgraph"]
